// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders mount 1`] = `
<Header
  age={12}
  name="whatever"
>
  <styled.h1>
    <h1
      className="sc-AxjAm SLPSP"
    >
      <div>
        Here is some example content
      </div>
    </h1>
  </styled.h1>
</Header>
`;

exports[`Header renders shallow 1`] = `
<styled.h1>
  <div>
    Here is some example content
  </div>
</styled.h1>
`;
